--- a/haskell-game.cabal
+++ b/haskell-game.cabal
@@ -19,7 +19,9 @@ executable haskell-game
   Main-is:            main.hs
   build-depends:      base >=4 && <5,
                       GLUT >=2.4 && <2.5,
-                      containers >=0.5 && <0.6
+                      containers >=0.5 && <0.6,
+                      time >=1.4.0.1 && <1.5
+
   Ghc-Options:          -Wall
   default-language:    Haskell2010
 
